--- a/reactVR_course/vr/index.html
+++ b/reactVR_course/vr/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!-- Origin Trial Token, feature = WebVR (For Chrome M62+), origin = https://itera.no, expires = 2018-04-08 -->
     <meta http-equiv="origin-trial" data-feature="WebVR (For Chrome M62+)" data-expires="2018-04-08" content="AmCTlMlCN3WjcdUXW6gFyvSBkOMPDymDoMmMgpneLqHEJ/EKtjh8KIbuiYSFkg+UnIQHCA9GA+NUgqa1Y4slqgsAAABgeyJvcmlnaW4iOiJodHRwczovL2l0ZXJhLm5vOjQ0MyIsImZlYXR1cmUiOiJXZWJWUjEuMU02MiIsImV4cGlyeSI6MTUyMzE4NDIxOCwiaXNTdWJkb21haW4iOnRydWV9">
+    <!-- Include your css here for the overlay. -->
+    <link rel="stylesheet" href="../static_assets/style.css" type="text/css" />
   </head>
   <body>
     <!-- When you're ready to deploy your app, update this line to point to your compiled client.bundle.js -->
@@ -21,4 +23,3 @@
     </script>
   </body>
 </html>
-
